fixed responsiveness with header img and some spacing

--- a/css/team.css
+++ b/css/team.css
@@ -181,11 +181,6 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 ===================================
 */
 
-/* Tablet Only */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-	/* Add styles that only apply to tablet. These are usually fixes to get resposnivenes right */
-}
-
 /* Tablet and Larger */
 @media screen and (min-width: 768px) {
 	/* Add styles that apply to table and desktop */
@@ -222,7 +217,7 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 	}
 
 	.header-content img {
-		max-height: 435px;
+		max-width: 420px;
 	}
 	.header-info {
 		width: 30%;
@@ -311,6 +306,14 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 	}
 }
 
+/* Tablet Only */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+	/* Add styles that only apply to tablet. These are usually fixes to get resposnivenes right */
+	.header-info h3, .header-info p {
+		margin: 0px;
+	}
+}
+
 /* Desktop Only */
 @media screen and (min-width: 1024px) {
 	/* Add styles that apply specifically to desktop */
@@ -342,6 +345,9 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 }
 
 @media screen and (min-width: 1300px) {
+	.header-content {
+		width: 55%;
+	}
 	.team-parent {
 		display: flex;
 		flex-direction: row;
